develop | Added delete_from_segment endpoint
